trying to fix collapsing

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -2,7 +2,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: calc(100% - 10%);
     flex-wrap: wrap;
 }
 
