--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ html, body{
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    min-height: 100vh;
 }
 
 #root {
